--- a/Conexion/src/main/resources/com/example/conexion/segundaPantalla.fxml
+++ b/Conexion/src/main/resources/com/example/conexion/segundaPantalla.fxml
@@ -6,38 +6,39 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="fondo" prefHeight="726.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.conexion.SegundaPantallaControlador">
+<AnchorPane fx:id="fondo" prefHeight="501.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.conexion.SegundaPantallaControlador">
    <children>
-      <Button fx:id="UpdateButton" layoutX="175.0" layoutY="681.0" mnemonicParsing="false" onAction="#insertarMecanico" text="Aceptar" />
-      <TextField fx:id="rolTextField" layoutX="47.0" layoutY="72.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Especialidad" />
-      <TextField fx:id="nombreTextField" layoutX="47.0" layoutY="123.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nombre" />
-      <TextField fx:id="numTextField" layoutX="48.0" layoutY="175.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Número de Teléfono" />
-      <TextField fx:id="seguroTextField" layoutX="47.0" layoutY="228.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Seguro" />
-      <TextField fx:id="passTextField" layoutX="47.0" layoutY="278.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Contraseña" />
-      <TextField fx:id="cpTextField" layoutX="48.0" layoutY="327.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Código Postal" />
-      <TextField fx:id="calleTextField" layoutX="47.0" layoutY="378.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Calle" />
-      <TextField fx:id="ciudadTextField" layoutX="48.0" layoutY="428.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Ciudad" />
-      <TextField fx:id="nominaTextField" layoutX="48.0" layoutY="480.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nomina" />
-      <TextField fx:id="conthorasTextField" layoutX="48.0" layoutY="532.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Horario Laboral" />
-      <TextField fx:id="nussTextField" layoutX="49.0" layoutY="582.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nuss" />
-      <TextField fx:id="horarioTextField" layoutX="49.0" layoutY="633.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Fecha de Contratación" />
-      <Label layoutX="51.0" layoutY="616.0" text="Fecha de contratación :" />
-      <Button fx:id="botonClaroOscuro" layoutX="362.0" layoutY="15.0" mnemonicParsing="false" onAction="#llamarcambiarClaroOscuro" prefHeight="17.0" prefWidth="26.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="TRANSPARENT" />
-      <Label layoutX="47.0" layoutY="52.0" text="Especialidad :" />
-      <Label layoutX="108.0" layoutY="13.0" text="Dar de alta Mecanico">
+      <Button fx:id="UpdateButton" layoutX="306.0" layoutY="400.0" mnemonicParsing="false" onAction="#insertarMecanico" text="Aceptar" />
+      <TextField fx:id="rolTextField" layoutX="53.0" layoutY="73.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Especialidad" />
+      <TextField fx:id="nombreTextField" layoutX="53.0" layoutY="124.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nombre" />
+      <TextField fx:id="numTextField" layoutX="54.0" layoutY="176.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Número de Teléfono" />
+      <TextField fx:id="seguroTextField" layoutX="53.0" layoutY="229.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Seguro" />
+      <TextField fx:id="passTextField" layoutX="53.0" layoutY="279.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Contraseña" />
+      <TextField fx:id="cpTextField" layoutX="54.0" layoutY="328.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Código Postal" />
+      <TextField fx:id="calleTextField" layoutX="418.0" layoutY="73.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Calle" />
+      <TextField fx:id="ciudadTextField" layoutX="419.0" layoutY="124.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Ciudad" />
+      <TextField fx:id="nominaTextField" layoutX="419.0" layoutY="176.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nomina" />
+      <TextField fx:id="conthorasTextField" layoutX="419.0" layoutY="229.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Horario Laboral" />
+      <TextField fx:id="nussTextField" layoutX="420.0" layoutY="279.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nuss" />
+      <TextField fx:id="horarioTextField" layoutX="420.0" layoutY="328.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Fecha de Contratación" />
+      <Label layoutX="422.0" layoutY="311.0" text="Fecha de contratación :" />
+      <Button fx:id="botonClaroOscuro" layoutX="728.0" layoutY="14.0" mnemonicParsing="false" onAction="#llamarcambiarClaroOscuro" prefHeight="17.0" prefWidth="26.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="TRANSPARENT" />
+      <Label layoutX="53.0" layoutY="53.0" text="Especialidad :" />
+      <Label layoutX="262.0" layoutY="16.0" text="Dar de alta Mecanico">
          <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Label layoutX="49.0" layoutY="106.0" text="Nombre :" />
-      <Label layoutX="49.0" layoutY="158.0" text="Teléfono :" />
-      <Label layoutX="48.0" layoutY="209.0" text="Seguro :" />
-      <Label layoutX="49.0" layoutY="262.0" text="Contraseña :" />
-      <Label layoutX="50.0" layoutY="310.0" text="Código Postal :" />
-      <Label layoutX="53.0" layoutY="361.0" text="Calle :" />
-      <Label layoutX="50.0" layoutY="411.0" text="Ciudad :" />
-      <Label layoutX="49.0" layoutY="462.0" text="Nomina :" />
-      <Label layoutX="50.0" layoutY="515.0" text="Horario Laboral :" />
-      <Label layoutX="51.0" layoutY="565.0" text="Nuss :" />
+      <Label layoutX="55.0" layoutY="107.0" text="Nombre :" />
+      <Label layoutX="55.0" layoutY="159.0" text="Teléfono :" />
+      <Label layoutX="54.0" layoutY="210.0" text="Seguro :" />
+      <Label layoutX="55.0" layoutY="263.0" text="Contraseña :" />
+      <Label layoutX="56.0" layoutY="311.0" text="Código Postal :" />
+      <Label layoutX="424.0" layoutY="53.0" text="Calle :" />
+      <Label layoutX="421.0" layoutY="107.0" text="Ciudad :" />
+      <Label layoutX="420.0" layoutY="159.0" text="Nomina :" />
+      <Label layoutX="421.0" layoutY="209.0" text="Horario Laboral :" />
+      <Label layoutX="422.0" layoutY="263.0" text="Nuss :" />
+      <Button layoutX="423.0" layoutY="400.0" mnemonicParsing="false" onAction="#VolverMec" text="Cancelar" />
    </children>
 </AnchorPane>
