--- a/Conexion/src/main/resources/com/example/conexion/segundaPantalla.fxml
+++ b/Conexion/src/main/resources/com/example/conexion/segundaPantalla.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -20,7 +21,6 @@
       <TextField fx:id="nominaTextField" layoutX="419.0" layoutY="176.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nomina" />
       <TextField fx:id="conthorasTextField" layoutX="419.0" layoutY="229.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Horario Laboral" />
       <TextField fx:id="nussTextField" layoutX="420.0" layoutY="279.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Nuss" />
-      <TextField fx:id="horarioTextField" layoutX="420.0" layoutY="328.0" prefHeight="25.0" prefWidth="310.0" promptText="Introduzca su Fecha de Contratación" />
       <Label layoutX="422.0" layoutY="311.0" text="Fecha de contratación :" />
       <Button fx:id="botonClaroOscuro" layoutX="728.0" layoutY="14.0" mnemonicParsing="false" onAction="#llamarcambiarClaroOscuro" prefHeight="17.0" prefWidth="26.0" style="-fx-background-color: transparent;" textAlignment="CENTER" textFill="TRANSPARENT" />
       <Label layoutX="53.0" layoutY="53.0" text="Especialidad :" />
@@ -40,5 +40,6 @@
       <Label layoutX="421.0" layoutY="209.0" text="Horario Laboral :" />
       <Label layoutX="422.0" layoutY="263.0" text="Nuss :" />
       <Button layoutX="423.0" layoutY="400.0" mnemonicParsing="false" onAction="#VolverMec" text="Cancelar" />
+      <DatePicker fx:id="horarioTextField" layoutX="423.0" layoutY="328.0" prefHeight="25.0" prefWidth="310.0" />
    </children>
 </AnchorPane>
