--- a/Conexion/src/main/resources/com/example/conexion/MecanicoPanel.fxml
+++ b/Conexion/src/main/resources/com/example/conexion/MecanicoPanel.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="fondo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.conexion.Controlador">
+<AnchorPane fx:id="fondo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="663.0" prefWidth="1026.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.conexion.MecanicoPanelControlador">
    <children>
       <TableView fx:id="EmpleadosContendor" layoutX="18.0" layoutY="56.0" onMouseClicked="#llamarDatosMecanico" onSort="#llamarDatosMecanico" prefHeight="215.0" prefWidth="990.0">
         <columns>
